Changelog
=========
[Alexandru Ghica - alec.ghica@eaudeweb.ro]
[Alin Voinea - alin.voinea@eaudeweb.ro]
[Antonio De Marinis - demarinis@eea.europa.eu]

3.2-dev - (unreleased)
----------------------

3.1 - (2011-03-09)
------------------
 * Change: management plan field is now required refs #4174 [demarant]

3.0 - (2011-03-02)
------------------
 * Feature: Use Blobs for Reports file field instead of OFS.Image.File [voineali #2713]
 * Upgrade steps:
   - Within portal_migration > Setup Tab:
     - Run 'Update Publications Files to Blobs' step

2.7 - (2011-02-01)
------------------
 * Bug fix: add proper class to subclass for previous fix [tiberich #4052]

2.6 - (2011-02-01)
------------------
 * Bug fix: fix management plan field to allow translation [tiberich #4052]

2.5 - (2011-01-05)
------------------
 * Change: added field management plan code and made it required for publishing, refs #4023 [demarant]
 * Change: made report cover smaller, refs #3921 [demarant]
 * Bug fix: changes in soer style made the style for reports break fixes #3921 [demarant]

2.4 - (2010-12-13)
------------------
 * Bug fix: Fixed jslint warnings [voineali #3821]

2.3 - (2010-11-30)
------------------
 * Bug fix: Added SOERMessage and SOERFactSheet to tree in report view [tiberich #3921]

2.2 - (2010-11-22)
------------------
 * Bug fix: Fix zpt errors found by hudson zptlint [voineali #3821]

2.1 - (2010-11-12)
------------------
 * Change: Added cache metadata to images [ghicaale #3667]

2.0 (2010-08-16)
----------------
 * Change: Change publications portal_type from Folder to Report [voineali #3521]
 * Upgrade steps:
     * Within portal_setup 'EEA Reports' profile import steps:
       - Workflow Tool
       - Portal Factory Tool
     * Within portal_migration, Setup Tab run steps:
       - Update publications portal_type from Folder to Report

1.9 (2010-06-16)
----------------
 * Bug fix: Made 'creators' field language dependent in order to avoid required