@@ -1,4 +1,0 @@
-from Products.CMFPlone import MigrationTool
-from evolve import Evolve
-
-MigrationTool.registerSetupWidget(Evolve)
